@@ -9,6 +9,8 @@ Fixed bug 1130: CloseResource doesn't recognize custom close method
 Fixed bug 1131: CloseResource should complain if code betwen declaration of resource and try
 Fixed bug 1134: UseStringBufferLength: false positives
 Fixed bug 1136: ECMAScript: NullPointerException in getLeft() and getRight()
+Fixed bug 1141: ECMAScript: getFinallyBlock() is buggy.
+Fixed bug 1142: ECMAScript: getCatchClause() is buggy.
 
 New EcmaScript rules and ruleset:
 	Controversial ruleset, featuring
